--- a/Report/CMP-6048A_REPORT.tex
+++ b/Report/CMP-6048A_REPORT.tex
@@ -112,10 +112,6 @@ Won’t Have:
 	\item{Player interaction}
 \end{itemize}
 
-\section{Report structure}
-
-	Chapter 2 will be some background on the ecology simulation looking at some other similar systems.
-
 \chapter{Background}
 
 With the basic idea of the creation of an Ecology simulation, we sought out similar systems to analyse.
@@ -245,7 +241,7 @@ We used the state machine design pattern which allowed us to manage which behavi
 
 
 \chapter{Discussion, conclusion and future work}
-	The final product satisfies x,y,z on the must category and does not satisfy x,y,z from the should category. We had hopes to implement a diploid gene system that would have created differences in agents from the same species across the simulation, and to graph the amounts of different genes as the simulation continued to see which had a better rate of survival. We had also hoped to add a "Smart Decision" system that would have improved how the agents choose which state they should be in and would have increased the amount of activity across the simulation as the "Idle" state caused a lot of stationary agents. This system would have also made the agents better at surviving, leaving less to random chance and giving a better impression of how well the agents could survive the environment based on their behaviour. Another system we wanted to implement was a weighted movement system, this would have replaced any instances of random movement and would have resulted in much more interesting behaviour and opportunities to improve the simulation. This system would have taken into account things like hunting pressure and feeding areas when deciding where the agent should move. In conclusion the ecology simulation produced was not where we had hoped it would be, and essentially ended up being the Minimum Viable Product for this project. 
+	The final product satisfies all of the must category but does not satisfy any of the should category. We had hopes to implement a diploid gene system that would have created differences in agents from the same species across the simulation, and to graph the amounts of different genes as the simulation continued to see which had a better rate of survival. We had also hoped to add a "Smart Decision" system that would have improved how the agents choose which state they should be in and would have increased the amount of activity across the simulation as the "Idle" state caused a lot of stationary agents. This system would have also made the agents better at surviving, leaving less to random chance and giving a better impression of how well the agents could survive the environment based on their behaviour. Another system we wanted to implement was a weighted movement system, this would have replaced any instances of random movement and would have resulted in much more interesting behaviour and opportunities to improve the simulation. This system would have taken into account things like hunting pressure and feeding areas when deciding where the agent should move. In conclusion the ecology simulation produced was not where we had hoped it would be, and essentially ended up being the Minimum Viable Product for this project. 
 
 
 \bibliographystyle{unsrt}
